rename asset output, keep local file of three

--- a/content/demos/cube.html
+++ b/content/demos/cube.html
@@ -7,7 +7,7 @@ type: customs
 ---
 <div id="container" class="flex-1"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+<script src="/js/three.min.js"></script>
 <script>
   function ready(callback) {
     if (document.readyState === 'complete' || document.readyState === 'interactive') {
