--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -1,11 +1,11 @@
 ﻿---
-title: "eggvance-wasm"
+title: "WebAssembly Port"
 author: "Julian Smolka"
 summary: "The WebAssembly port of the eggvance GBA emulator."
 date: 2020-04-12
 type: custom
 ---
-<div class="custom flex flex-col items-center" x-data="{ controls: false }">
+<div class="single flex flex-col items-center" x-data="{ controls: false }">
   <canvas id="canvas" class="w-full bg-black" oncontextmenu="event.preventDefault()" style="max-height: 491px"></canvas>
   <input id="rom-input" class="hidden" type="file" onchange="Module.loadRom()">
   <input id="backup-input" class="hidden" type="file" onchange="Module.loadBackup()">
