update eggvance wasm

--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -6,7 +6,7 @@ date: 2020-04-12
 type: custom
 ---
 <div class="single flex flex-col items-center" x-data="{ controls: false }">
-  <canvas id="canvas" class="w-full bg-black" oncontextmenu="event.preventDefault()" style="max-height: 491px"></canvas>
+  <canvas id="canvas" class="w-full bg-dark-500" oncontextmenu="event.preventDefault()" style="max-height: 491px"></canvas>
   <input id="rom-input" class="hidden" type="file" onchange="Module.loadRom()">
   <input id="backup-input" class="hidden" type="file" onchange="Module.loadBackup()">
   <div class="flex mt-4">
