--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -106,7 +106,7 @@ type: custom
     loadDemo() {
       const request = new XMLHttpRequest();
 
-      request.open("GET", '/roms/bigmap.gba');
+      request.open('GET', '/roms/bigmap.gba');
       request.responseType = 'arraybuffer';
       request.onload = event => {
         const data = new Uint8Array(request.response);
@@ -124,7 +124,7 @@ type: custom
     const width  = canvas.clientWidth;
     const height = 2 * width / 3;
 
-    const style = document.createElement("style");
+    const style = document.createElement('style');
     style.appendChild(document.createTextNode(`#canvas { width: ${width}px; height: ${height}px }`));
     document.head.appendChild(style);
 
