shorten links, change url

--- a/content/gba/wasm.html
+++ b/content/gba/wasm.html
@@ -1,7 +1,7 @@
 ﻿---
 title: "WebAssembly Port"
 author: "Julian Smolka"
-summary: "WebAssembly port of the eggvance GBA emulator."
+summary: "WebAssembly port of the eggvance emulator."
 date: 2020-04-12
 type: custom
 ---
