--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -5,13 +5,13 @@ summary: "WebAssembly port of the eggvance emulator."
 date: 2020-04-12
 type: custom
 ---
-<div class="base flex flex-col items-center" x-data="{ controls: false }">
-  <canvas id="canvas" class="w-full bg-dark-500"></canvas>
+<div x-data="{ controls: false }" class="base flex flex-col items-center">
+  <canvas id="canvas" :class="{ 'w-full': true, 'bg-dark-500': isDarkTheme(), 'bg-white': !isDarkTheme() }"></canvas>
   <input id="rom-input" class="hidden" type="file" onchange="Module.loadRom()">
-  <input id="backup-input" class="hidden" type="file" onchange="Module.loadBackup()">
+  <input id="save-input" class="hidden" type="file" onchange="Module.loadSave()">
   <div class="flex mt-4">
     <button class="mr-4" onclick="inputRom.click()">Load rom</button>
-    <button class="mr-4" onclick="inputBackup.click()">Load save</button>
+    <button class="mr-4" onclick="inputSave.click()">Load save</button>
     <button class="mr-4" onclick="Module.loadDemo()">Load demo</button>
     <button @click="controls = !controls" x-text="`${controls ? 'Hide' : 'Show'} controls`"/>
   </div>
@@ -35,91 +35,114 @@ type: custom
   </div>
 </div>
 <script type='text/javascript'>
-  const inputRom = document.getElementById('rom-input');
-  const inputBackup = document.getElementById('backup-input');
+  const inputRom  = document.getElementById('rom-input');
+  const inputSave = document.getElementById('save-input');
+
+  class FileSystem {
+    constructor() {
+      this.id = 0;
+    }
+
+    write(data) {
+      const filename = `data${this.id++}.bin`;
+      FS.writeFile(filename, data);
+
+      return filename;
+    }
+  }
 
   var Module = {
-    fileId: 0,
+    fs: new FileSystem(),
     canvas: document.getElementById('canvas'),
-    preInit() {
+    onRuntimeInitialized() {
       FS.writeFile('eggvance.toml', `
         [general]
+        save_path = ""
         bios_file = ""
         bios_skip = true
-        save_dir = ""
-        deadzone = 16000
 
-        [multipliers]
-        fps_multiplier_1 = 2.0
-        fps_multiplier_2 = 4.0
-        fps_multiplier_3 = 6.0
-        fps_multiplier_4 = 8.0
+        [cartridge]
+        save_type = "auto"
+        gpio_type = "auto"
+
+        [framerate]
+        custom_1 = 119.474
+        custom_2 = 238.948
+        custom_3 = 358.442
+        custom_4 = 477.896
 
         [controls]
-        a      = ["U", "B"            ]
-        b      = ["H", "A"            ]
-        up     = ["W", "DPUP"         ]
-        down   = ["S", "DPDOWN"       ]
-        left   = ["A", "DPLEFT"       ]
-        right  = ["D", "DPRIGHT"      ]
-        start  = ["G", "START"        ]
-        select = ["F", "BACK"         ]
-        l      = ["Q", "LEFTSHOULDER" ]
-        r      = ["I", "RIGHTSHOULDER"]
+        a      = ["U", "B"    ]
+        b      = ["H", "A"    ]
+        up     = ["W", "Up"   ]
+        down   = ["S", "Down" ]
+        left   = ["A", "Left" ]
+        right  = ["D", "Right"]
+        start  = ["G", "Start"]
+        select = ["F", "Back" ]
+        l      = ["Q", "L"    ]
+        r      = ["I", "R"    ]
 
         [shortcuts]
-        reset         = ["R", ""]
-        fullscreen    = ["T", ""]
-        fps_default   = ["1", ""]
-        fps_custom_1  = ["2", ""]
-        fps_custom_2  = ["3", ""]
-        fps_custom_3  = ["4", ""]
-        fps_custom_4  = ["5", ""]
-        fps_unlimited = ["6", ""]
+        reset       = ["R", ""]
+        fullscreen  = ["T", ""]
+        fr_hardware = ["1", ""]
+        fr_custom_1 = ["2", ""]
+        fr_custom_2 = ["3", ""]
+        fr_custom_3 = ["4", ""]
+        fr_custom_4 = ["5", ""]
+        fr_unbound  = ["6", ""]
       `);
-    },
-    loadFile(input, callback) {
-      if (input.files.length === 0)
-        return;
 
-      const reader = new FileReader();
-      reader.onload = function() {
-        callback(new Uint8Array(reader.result));
-      }
-      reader.readAsArrayBuffer(input.files[0]);
-      input.value = '';
+      this.updateBackground(isDarkTheme());
     },
-    loadRom() {
-      this.loadFile(inputRom, data => {
-        this.fileId++;
-        FS.writeFile(`rom${this.fileId}.gba`, data);
-        this.eggvanceLoadRom(`rom${this.fileId}.gba`);
+    async readUrl(url) {
+      return new Promise(resolve => {
+        const request = new XMLHttpRequest();
+
+        request.open('GET', url);
+        request.responseType = 'arraybuffer';
+        request.onload = event => {
+          resolve(new Uint8Array(request.response));
+        }
+        request.send();
       });
     },
-    loadBackup(file) {
-      this.loadFile(inputBackup, data => {
-        this.fileId++;
-        FS.writeFile(`rom${this.fileId}.sav`, data);
-        this.eggvanceLoadBackup(`rom${this.fileId}.sav`);
+    async readFile(input) {
+      return new Promise(resolve => {
+        const reader = new FileReader();
+        reader.onload = () => {
+          resolve(new Uint8Array(reader.result));
+        }
+        reader.readAsArrayBuffer(input.files[0]);
+        input.value = '';
       });
     },
-    loadDemo() {
-      const request = new XMLHttpRequest();
-
-      request.open('GET', '/roms/bigmap.gba');
-      request.responseType = 'arraybuffer';
-      request.onload = event => {
-        const data = new Uint8Array(request.response);
-
-        this.fileId++;
-        FS.writeFile(`rom${this.fileId}.gba`, data);
-        this.eggvanceLoadRom(`rom${this.fileId}.gba`);
-      }
-      request.send();
+    async loadRom() {
+      const data = await this.readFile(inputRom);
+      this.eggvanceLoadRom(this.fs.write(data));
+    },
+    async loadDemo() {
+      const data = await this.readUrl('/roms/bigmap.gba');
+      this.eggvanceLoadRom(this.fs.write(data));
+    },
+    async loadSave() {
+      const data = await this.readFile(inputSave);
+      this.eggvanceLoadSave(this.fs.write(data));
+    },
+    updateBackground(dark) {
+      this.eggvanceSetBackground(dark
+        ? 0xff2b3137
+        : 0xffffffff
+      );
     }
   };
 
   window.onload = () => {
+    onThemeChanged = dark => {
+      Module.updateBackground(dark)
+    };
+
     const canvas = document.getElementById('canvas');
     const width  = canvas.clientWidth;
     const height = 2 * width / 3;
