--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -5,7 +5,7 @@ summary: "WebAssembly port of the eggvance emulator."
 date: 2020-04-12
 type: blank
 ---
-<div x-data="{ controls: false }" class="base flex flex-col w-full max-w-screen-lg m-auto items-center">
+<div x-data="{ controls: false }" class="base flex flex-col w-full max-w-screen-lg m-auto p-4 items-center">
   <canvas id="canvas" :class="{ 'w-full': true, 'bg-base-dark': isDarkTheme(), 'bg-base-light': !isDarkTheme() }"></canvas>
   <input id="rom-input" class="hidden" type="file" onchange="Module.loadRom()">
   <input id="save-input" class="hidden" type="file" onchange="Module.loadSave()">
@@ -15,7 +15,7 @@ type: blank
     <button class="mr-4" onclick="Module.loadDemo()">Load demo</button>
     <button @click="controls = !controls" x-text="`${controls ? 'Hide' : 'Show'} controls`"/>
   </div>
-  <div class="w-full mt-4" :class="{ hidden: !controls }">
+  <div class="w-full max-w-screen-md mt-4" :class="{ hidden: !controls }">
   {{<markdown>}}
   | Emulator     | Keyboard | Controller |
   |--------------|----------|------------|
