--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -1,14 +1,14 @@
 ﻿---
 title: "WebAssembly Port"
 author: "Julian Smolka"
-summary: "WebAssembly port of the eggvance emulator."
+summary: "WebAssembly port of the eggvance GBA emulator."
 date: 2020-04-12
 type: blank
 ---
-<div x-data="{ controls: false }" class="base flex flex-col w-full max-w-screen-lg m-auto p-4 items-center">
-  <canvas id="canvas" :class="{ 'w-full': true, 'bg-base-dark': isDarkTheme(), 'bg-base-light': !isDarkTheme() }"></canvas>
-  <input id="rom-input" class="hidden" type="file" onchange="Module.loadRom()">
-  <input id="save-input" class="hidden" type="file" onchange="Module.loadSave()">
+<div x-data="{ controls: false, dark: isDarkTheme() }" class="base flex flex-col w-full max-w-screen-lg m-auto p-4 items-center">
+  <canvas id="canvas" :class="{ 'w-full': true, 'bg-base-dark': dark, 'bg-base-light': !dark }"></canvas>
+  <input id="rom-input" class="hidden" type="file" accept=".gba" onchange="Module.loadRom()">
+  <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
   <div class="flex mt-4">
     <button class="mr-4" onclick="inputRom.click()">Load rom</button>
     <button class="mr-4" onclick="inputSave.click()">Load save</button>
