--- a/content/tests/palette.html
+++ b/content/tests/palette.html
@@ -40,7 +40,7 @@ draft: true
     <div class="w-40 h-10 bg-red-800"></div>
     <div class="w-40 h-10 bg-red-900"></div>
   </div>
-  <div class="flex flex-col pl-4">
+  <div class="flex flex-col px-4">
     <div class="w-40 h-10 bg-blue-100"></div>
     <div class="w-40 h-10 bg-blue-200"></div>
     <div class="w-40 h-10 bg-blue-300"></div>
@@ -50,5 +50,16 @@ draft: true
     <div class="w-40 h-10 bg-blue-700"></div>
     <div class="w-40 h-10 bg-blue-800"></div>
     <div class="w-40 h-10 bg-blue-900"></div>
+  </div>
+  <div class="flex flex-col pl-4">
+    <div class="w-40 h-10 bg-dark-100"></div>
+    <div class="w-40 h-10 bg-dark-200"></div>
+    <div class="w-40 h-10 bg-dark-300"></div>
+    <div class="w-40 h-10 bg-dark-400"></div>
+    <div class="w-40 h-10 bg-dark-500"></div>
+    <div class="w-40 h-10 bg-dark-600"></div>
+    <div class="w-40 h-10 bg-dark-700"></div>
+    <div class="w-40 h-10 bg-dark-800"></div>
+    <div class="w-40 h-10 bg-dark-900"></div>
   </div>
 </div>
