--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -5,8 +5,8 @@ summary: "WebAssembly port of the eggvance GBA emulator."
 date: 2020-04-12
 type: blank
 ---
-<div x-data="{ controls: false, dark: isDarkTheme() }" class="base flex flex-col w-full max-w-screen-lg m-auto p-4 items-center">
-  <canvas id="canvas" class="w-full" :class="{ 'bg-base-dark': dark, 'bg-base-light': !dark }"></canvas>
+<div x-data="{ controls: false }" class="base flex flex-col w-full max-w-screen-xl m-auto p-4 items-center">
+  <canvas id="canvas" class="w-full bg-dark-900"></canvas>
   <input id="rom-input" class="hidden" type="file" accept=".gba" onchange="Module.loadRom()">
   <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
   <div class="flex mt-4">
@@ -94,7 +94,7 @@ type: blank
         fr_unbound  = ["6", ""]
       `);
 
-      this.updateBackground(isDarkTheme());
+      this.eggvanceSetBackground(0xFF161823);
     },
     async readUrl(url) {
       return new Promise(resolve => {
@@ -129,20 +129,10 @@ type: blank
     async loadSave() {
       const data = await this.readFile(inputSave);
       this.eggvanceLoadSave(this.fs.write(data));
-    },
-    updateBackground(dark) {
-      this.eggvanceSetBackground(dark
-        ? 0xff242933
-        : 0xfff2f4f8
-      );
     }
   };
 
   window.onload = () => {
-    onThemeChanged = dark => {
-      Module.updateBackground(dark)
-    };
-
     const canvas = document.getElementById('canvas');
     const width  = canvas.clientWidth;
     const height = 2 * width / 3;
