--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -5,25 +5,25 @@ summary: "WebAssembly port of the eggvance GBA emulator."
 date: 2020-04-12
 type: blank
 ---
-<div x-data="{ controls: false }" class="content flex flex-col w-full max-w-screen-xl m-auto p-4 items-center">
+<div x-data="{ controls: false }" class="content flex flex-col items-center max-w-screen-xl mx-auto my-4 px-4">
   <canvas id="canvas" class="w-full bg-dark-900"></canvas>
   <input id="rom-input" class="hidden" type="file" accept=".gba" onchange="Module.loadRom()">
   <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
-  <div class="flex max-w-screen-md mt-4">
-    <div class="pr-2">
+  <div class="flex max-w-screen-md mt-6">
+    <div class="mr-2">
       <button onclick="inputRom.click()">Load rom</button>
     </div>
-    <div class="px-2">
+    <div class="mx-2">
       <button onclick="inputSave.click()">Load save</button>
     </div>
-    <div class="px-2">
+    <div class="mx-2">
       <button onclick="Module.loadDemo()">Load demo</button>
     </div>
-    <div class="pl-2">
+    <div class="ml-2">
       <button @click="controls = !controls" x-text="`${controls ? 'Hide' : 'Show'} controls`"/>
     </div>
   </div>
-  <div class="w-full max-w-screen-md mt-4" :class="{ hidden: !controls }">
+  <div class="w-full max-w-screen-md mt-6" :class="{ hidden: !controls }">
   {{<markdown>}}
   | Emulator     | Keyboard | Controller |
   |--------------|----------|------------|
@@ -42,6 +42,7 @@ type: blank
   {{</markdown>}}
   </div>
 </div>
+
 <script type='text/javascript'>
   const inputRom  = document.getElementById('rom-input');
   const inputSave = document.getElementById('save-input');
