small wasm shell changes

--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -43,7 +43,7 @@ type: blank
   </div>
 </div>
 
-<script type='text/javascript'>
+<script type="text/javascript">
   const inputRom  = document.getElementById('rom-input');
   const inputSave = document.getElementById('save-input');
 
@@ -156,4 +156,4 @@ type: blank
     }
   }
 </script>
-<script async src=/wasm/eggvance.js></script>
+<script src="/wasm/eggvance.js" async></script>
