--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -5,8 +5,8 @@ summary: "WebAssembly port of the eggvance GBA emulator."
 date: 2020-04-12
 type: blank
 ---
-<div x-data="{ controls: false }" class="content flex flex-col items-center max-w-screen-xl mx-auto my-4 px-4">
-  <canvas id="canvas" class="w-full bg-dark-900"></canvas>
+<div x-data="{ controls: false }" class="content w-full flex flex-col flex-1 items-center justify-center max-w-screen-xl mx-auto my-4 px-4">
+  <canvas id="canvas" class="w-full bg-white"></canvas>
   <input id="rom-input" class="hidden" type="file" accept=".gba" onchange="Module.loadRom()">
   <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
   <div class="flex max-w-screen-md mt-6">
@@ -103,7 +103,7 @@ type: blank
         fr_unbound  = ["6", ""]
       `);
 
-      this.eggvanceSetBackground(0xFF161823);
+      this.eggvanceSetBackground(0xFFFFFFFF);
     },
     async readUrl(url) {
       return new Promise(resolve => {
