use celeste as gba demo

--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -132,7 +132,7 @@ type: blank
       this.eggvanceLoadRom(this.fs.write(data));
     },
     async loadDemo() {
-      const data = await this.readUrl('/roms/bigmap.gba');
+      const data = await this.readUrl('/roms/celeste.gba');
       this.eggvanceLoadRom(this.fs.write(data));
     },
     async loadSave() {
