--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -11,34 +11,34 @@ type: blank
   <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
   <div class="flex max-w-screen-md mt-6">
     <div class="mr-2">
-      <button onclick="inputRom.click()">Load rom</button>
+      <button @click="inputRom.click()">Load rom</button>
     </div>
     <div class="mx-2">
-      <button onclick="inputSave.click()">Load save</button>
+      <button @click="inputSave.click()">Load save</button>
     </div>
     <div class="mx-2">
-      <button onclick="Module.loadDemo(this)">Load demo</button>
+      <button @click="Module.loadDemo(this)">Load demo</button>
     </div>
     <div class="ml-2">
-      <button onclick="controls = !controls" x-text="`${controls ? 'Hide' : 'Show'} controls`"/>
+      <button @click="controls = !controls" x-text="`${controls ? 'Hide' : 'Show'} controls`"/>
     </div>
   </div>
   <div class="w-full max-w-screen-md mt-6" :class="{ hidden: !controls }">
   {{<markdown>}}
-  | Emulator     | Keyboard | Controller |
-  |--------------|----------|------------|
-  | Up           | W        | Up         |
-  | Down         | S        | Down       |
-  | Left         | A        | Left       |
-  | Right        | D        | Right      |
-  | A            | U        | B          |
-  | B            | H        | A          |
-  | Start        | G        | Start      |
-  | Select       | F        | Back       |
-  | L            | Q        | L          |
-  | R            | I        | R          |
-  | Reset        | R        | -          |
-  | Change speed | 1 to 6   | -          |
+  | Emulator            | Keyboard | Controller |
+  |---------------------|----------|------------|
+  | Up                  | W        | Up         |
+  | Down                | S        | Down       |
+  | Left                | A        | Left       |
+  | Right               | D        | Right      |
+  | A                   | U        | B          |
+  | B                   | H        | A          |
+  | Start               | G        | Start      |
+  | Select              | F        | Back       |
+  | L                   | Q        | L          |
+  | R                   | I        | R          |
+  | Reset               | R        | -          |
+  | Change refresh rate | 1 to 6   | -          |
   {{</markdown>}}
   </div>
 </div>
@@ -67,9 +67,10 @@ type: blank
       FS.writeFile('eggvance.ini', `
         [general]
         save_path =
-        bios_file = bios.bin
+        bios_file =
         bios_skip = true
         bios_hash = true
+        lcd_color = true
 
         [cartridge]
         save_type = auto
@@ -125,8 +126,6 @@ type: blank
         fr_custom_4 =
         fr_unbound  =
       `);
-
-      this.eggvanceSetBackground(0xFFFFFFFF);
     },
     async readUrl(url) {
       return new Promise(resolve => {
