use normal events where alpine is not needed

--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -11,13 +11,13 @@ type: blank
   <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
   <div class="flex max-w-screen-md mt-6">
     <div class="mr-2">
-      <button @click="inputRom.click()">Load rom</button>
+      <button onclick="inputRom.click()">Load rom</button>
     </div>
     <div class="mx-2">
-      <button @click="inputSave.click()">Load save</button>
+      <button onclick="inputSave.click()">Load save</button>
     </div>
     <div class="mx-2">
-      <button @click="Module.loadDemo(this)">Load demo</button>
+      <button onclick="Module.loadDemo(this)">Load demo</button>
     </div>
     <div class="ml-2">
       <button @click="controls = !controls" x-text="`${controls ? 'Hide' : 'Show'} controls`"/>
