--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -7,14 +7,14 @@ type: blank
 ---
 <div x-data="{ controls: false }" class="content w-full flex flex-col flex-1 items-center justify-center max-w-screen-xl mx-auto my-4 px-4 py-8 sm:py-16">
   <canvas id="canvas" class="w-full bg-white"></canvas>
-  <input id="rom-input" class="hidden" type="file" accept=".gba" onchange="Module.loadRom()">
-  <input id="save-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSave()">
+  <input id="gba-input" class="hidden" type="file" accept=".gba" onchange="Module.loadGba()">
+  <input id="sav-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSav()">
   <div class="flex max-w-screen-md mt-6">
     <div class="mr-2">
-      <button onclick="inputRom.click()">Load rom</button>
+      <button onclick="inputGba.click()">Load rom</button>
     </div>
     <div class="mx-2">
-      <button onclick="inputSave.click()">Load save</button>
+      <button onclick="inputSav.click()">Load save</button>
     </div>
     <div class="mx-2">
       <button onclick="Module.loadDemo(this)">Load demo</button>
@@ -44,16 +44,16 @@ type: blank
 </div>
 
 <script type="text/javascript">
-  const inputRom  = document.getElementById('rom-input');
-  const inputSave = document.getElementById('save-input');
+  const inputGba = document.getElementById('gba-input');
+  const inputSav = document.getElementById('sav-input');
 
   class FileSystem {
     constructor() {
       this.id = 0;
     }
 
-    write(data) {
-      const filename = `data${this.id++}.bin`;
+    write(data, ext) {
+      const filename = `data${this.id++}.${ext}`;
       FS.writeFile(filename, data);
 
       return filename;
@@ -63,7 +63,8 @@ type: blank
   var Module = {
     fs: new FileSystem(),
     canvas: document.getElementById('canvas'),
-    onRuntimeInitialized() {
+
+    preInit() {
       FS.writeFile('eggvance.ini', `
         [general]
         save_path =
@@ -127,6 +128,7 @@ type: blank
         fr_unbound  =
       `);
     },
+
     async readUrl(url) {
       return new Promise(resolve => {
         const request = new XMLHttpRequest();
@@ -139,6 +141,7 @@ type: blank
         request.send();
       });
     },
+
     async readFile(input) {
       return new Promise(resolve => {
         const reader = new FileReader();
@@ -149,22 +152,25 @@ type: blank
         input.value = '';
       });
     },
-    async loadRom() {
-      const data = await this.readFile(inputRom);
-      this.eggvanceLoadRom(this.fs.write(data));
+
+    async loadGba() {
+      const data = await this.readFile(inputGba);
+      this.eggvanceLoadGba(this.fs.write(data, 'gba'));
     },
+
     async loadDemo(button) {
       button.innerHTML = 'Loading...';
       try {
         const data = await this.readUrl('/roms/celeste.gba');
-        this.eggvanceLoadRom(this.fs.write(data));
+        this.eggvanceLoadGba(this.fs.write(data, 'gba'));
       } finally {
         button.innerHTML = 'Load demo';
       }
     },
-    async loadSave() {
-      const data = await this.readFile(inputSave);
-      this.eggvanceLoadSave(this.fs.write(data));
+
+    async loadSav() {
+      const data = await this.readFile(inputSav);
+      this.eggvanceLoadSav(this.fs.write(data, 'sav'));
     }
   };
 
