--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -9,7 +9,7 @@ type: blank
   <canvas id="canvas" class="w-full bg-white"></canvas>
   <input id="gba-input" class="hidden" type="file" accept=".gba" onchange="Module.loadGba()">
   <input id="sav-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSav()">
-  <div class="flex max-w-screen-lg mt-6">
+  <div class="flex max-w-screen-xl mt-6">
     <div class="mr-2">
       <button onclick="inputGba.click()">Load rom</button>
     </div>
@@ -161,7 +161,7 @@ type: blank
     async loadDemo(button) {
       button.innerHTML = 'Loading...';
       try {
-        const data = await this.readUrl('/roms/celeste.gba');
+        const data = await this.readUrl('/data/celeste.gba');
         this.eggvanceLoadGba(this.fs.write(data, 'gba'));
       } finally {
         button.innerHTML = 'Load demo';
