--- a/content/cycling.html
+++ b/content/cycling.html
@@ -7,7 +7,7 @@ type: cycling
 ---
 <div class="content relative w-full flex flex-col flex-1 items-center justify-center max-w-screen-xl mx-auto my-4 px-4 py-8 sm:py-16">
   <canvas id="chart" class="w-full bg-white"></canvas>
-  <div class="flex max-w-screen-xl mt-6">
+  <div class="flex mt-6">
     <div class="mr-2">
       <button onclick="update(groupByDay, 'week')">Group by day</button>
     </div>
@@ -19,4 +19,3 @@ type: cycling
     </div>
   </div>
 </div>
-
