--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -9,7 +9,7 @@ type: blank
   <canvas id="canvas" class="w-full bg-white"></canvas>
   <input id="gba-input" class="hidden" type="file" accept=".gba" onchange="Module.loadGba()">
   <input id="sav-input" class="hidden" type="file" accept=".sav" onchange="Module.loadSav()">
-  <div class="flex max-w-screen-xl mt-6">
+  <div class="flex mt-6">
     <div class="mr-2">
       <button onclick="inputGba.click()">Load rom</button>
     </div>
