--- a/content/cycling.html
+++ b/content/cycling.html
@@ -9,13 +9,13 @@ type: cycling
   <canvas id="chart" class="w-full bg-white"></canvas>
   <div class="flex mt-6">
     <div class="mr-2">
-      <button onclick="update(groupByDay, titleDay, 'week')">Group by day</button>
+      <button id="btnDay">Group by day</button>
     </div>
     <div class="mx-2">
-      <button onclick="update(groupByWeek, titleWeek, 'week')">Group by week</button>
+      <button id="btnWeek">Group by week</button>
     </div>
     <div class="mx-2">
-      <button onclick="update(groupByMonth, titleMonth, 'month')">Group by month</button>
+      <button id="btnMonth">Group by month</button>
     </div>
   </div>
 </div>
