move static data into own folder

--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -96,7 +96,7 @@ type: blank
     async loadDemo(button) {
       button.innerHTML = 'Loading...';
       try {
-        const data = await this.readUrl('/data/celeste.gba');
+        const data = await this.readUrl('/static/data/celeste.gba');
         this.eggvanceLoadGba(this.fs.write(data, 'gba'));
       } finally {
         button.innerHTML = 'Load demo';
