use static dir in eggvance wasm

--- a/content/eggvance/wasm.html
+++ b/content/eggvance/wasm.html
@@ -124,4 +124,4 @@ type: blank
     }
   }
 </script>
-<script src="/wasm/eggvance.js" async></script>
+<script src="/static/wasm/eggvance.js" async></script>
